@@ -26,7 +26,7 @@
 #define	SIMTA_FILE_PID			"/var/run/simta.pid"
 #define	SIMTA_BASE_DIR			"/var/spool/simta"
 #define	SIMTA_BOUNCE_LINES		100
-#define	SIMTA_EFILE_VERSION		3
+#define	SIMTA_EFILE_VERSION		4
 #define SIMTA_MAX_RUNNERS_SLOW		250
 #define SIMTA_MAX_RUNNERS_LOCAL		25
 #define	SIMTA_EXPANSION_FAILED		0
