@@ -15,6 +15,7 @@ internal
 	expand to that and ignore local members or moderation.
     - per-host queue configuration: min/max wait, no_punt option.
     - revised configuration syntax for no_punt & per-host, bug fix.
+    - "ignore" optional Efile D line - efile change phase 1
 
 0.8.2
     - simta_gettimeofday() preffered interface
